# frequenz-api-microgrid

./: minimum-requirements-ci.txt  pyproject.toml  setup.py
.github/workflows/: ci.yaml
