[build-system]
requires = [
    "mypy-protobuf >= 3.4.0, < 4",
    "grpcio-tools >= 1.50, < 2",
    "protobuf >= 4.21.8, < 5",
    "setuptools >= 67.3.2, < 68",
    "setuptools-protobuf >= 0.1.6, < 0.2.0",
    "setuptools_scm[toml] >= 7.1.0, < 8",
    "wheel",
]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-protobuf"]
